--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.2 2024-05-08
+  - Added stroke etiology to participants.tsv, enjoy!
 1.1.1 2024-05-08
   - Added stroke etiology to participants.tsv
 1.1.0 2024-04-17
